src/scss/badge.scss
@import 'variables';

button {
    display: inline-block;
    margin: 0 2px 2px 2px;
}

#pending-badges {
    margin-bottom: 10px;
}

.badge-container-pending {
    border: 1px solid #f2f2f2;
    background-color: #ffffff;
    padding: 25px 70px;
    margin-bottom: 10px;

    .pull-left {
        padding-right: 10px;
        img {
            width: 125px;
            padding: 10px;
            box-shadow: 1px 4px 3px #ececec;
            -webkit-box-shadow: 1px 4px 3px #ececec;
            border: 1px solid #f2f2f2;
            border-radius: 6px;
            margin-bottom: 15px;
        }
    }
    .media-heading {
        font-family: 'Open Sans Condensed',sans-serif;
        font-size: 45px;
        margin: 20px 0px;
    }
    .button-row {
        margin-top: 10px;
        border-top: 2px dashed #bfbfbf;
        padding-top: 10px;
        text-align: center;

        button {
            font-size: 13px;
        }
        .btn-decline {
            background: none;
            background-color: #ffffff;
            border: none;
            color: #476099;
            box-shadow: none;
            -webkit-box-shadow: none;
        }
    }
}

.badge-image {
    text-align: center;
    img {
        display: inline-block;
        max-width: 100%;
        height: auto;
        padding: 4px;
    }
}

.ajax-message {
    i.fa {
        font-size: 20px;
    }
    span {
        padding-left: 5px;
    }
}

.modal-left {
    text-align: center;
}

.select-rating {
    width: 60px;
}

.delete-buttons {
    margin-top: 20px;
}

#badge-settings {
    .badge-content {
        label {
            margin-right: 5px;
            color: #83a04b;
        }
    }
    .settings-content {
        label {
            margin-left: 5px;
            font-weight: normal;
            margin-right: 20px;
        }
    }
    .sub-heading {
        font-weight: bold;
        color: #7f7179;
        font-size: 15px;
    }
    .rating-help {
        font-size: 13px;
    }
}

#badge-stats {
    h3 {
        font-weight: 300;
    }
    .panel {
        border:none;
        border-radius: 4px;
        img.badge-icon {
            width: 30px;
        }
        .panel-heading {
            border-bottom: 1px solid #dddddd;
            h3 {
                line-height: 30px;
                font: 300 28px "Open Sans Condensed",sans-serif;
                text-transform: uppercase;
                text-decoration: none;
                color: #7f7179;
                margin: 0px;
            }
        }
        .panel-body {
            padding-top: 5px;
            table {
                td, th {
                    border-bottom: 0px;
                    border-top: 0px;
                    text-align: center;
                    vertical-align: middle;
                }
                td.name {
                    text-align: left;
                }
            }
            .issuer-badges-wrapper {
                padding: 5px 15px 15px 15px;
                border-bottom: 1px solid #f0f0f0;
                .issuer-badges {
                    a {
                        padding-right: 15px;
                    }
                }
            }
        }
    }
}

#badge-info {
    a {
        color: $link-color;
    }
    font-size: 13px;
    h2.uppercase-header {
        padding: 15px 0 0 0;
    }
    .expired, .revoked {
        color: #8c2e0b;
        font-weight: bold;
        font-size: 20px;
    }
    .revoked {
        text-transform: uppercase;
    }
    .badge-info {
        label {
            color: #83a04b;
            margin-bottom: 5px;
        }
    }
    .description {
        font-weight: bold;
        margin: 20px 0 5px 0;
    }
    .congratulated-header > i {
        color: #ea7d45;
    }
    .panel {
        background-color: transparent;
        box-shadow: none;
        -webkit-box-shadow: none;
        .panel-body {
            padding-top:0px;
        }
    }
    #badge-share-inputs .col-sm-3.text-right {
        float:right;
    }
}

#assertion-info {
    width: 100%;
    th {
        text-transform: uppercase;
        font-weight: bold;
        font-size: 13px;
        color: #f59f48;
        border-bottom: 3px solid #ccc;
    }
    td:first-child {
        text-transform: uppercase;
        font-weight: bold;
        font-size: 12px;
    }
}

#export-badges {
    a.badge-download {
        color: #766d72;
    }
}

.issued-on {
    label {
        margin-right: 5px;
    }
}

.issuer-data {
    margin-bottom: 3px;
    .issuer-links, .issuer-image {
        margin-left: 5px;
    }
    .issuer-image {
        img {
            max-width: 50px;
            max-height: 50px;
            padding: 3px;
            border: 1px solid #dddddd;
            border-radius: 4px;
        }
    }
}

